--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
    <div class="game-list__item">
       <div class="game-item game-item_new">
          <div class="game-item__img">
-            <img loading="lazy" src="./index_files/pin-up-casino.jpg" alt="Pin-Up Casino" width="191" height="143">
+            <img loading="lazy" src="./index_files/reactoonz.jpg" alt="Pin-Up Casino" width="191" height="143">
             <div class="game-item__action">
                <div class="game-item__play">
                	<a id="reflink" href="#">
